--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,38 +1,11 @@
 {
-	"image": "mcr.microsoft.com/devcontainers/universal:2",
-	"hostRequirements": {
-	  "cpus": 4
-	},
-	"waitFor": "onCreateCommand",
-	"updateContentCommand": "npm install",
-	"postCreateCommand": "",
-	"postAttachCommand": {
-	  "server": "npm run dev"
-	},
+	"name": "Default Linux Universal",
+	"image": "mcr.microsoft.com/devcontainers/universal:2-linux",
 	"customizations": {
-	  "codespaces": {
-		"openFiles": [
-		  "src/index.jsx"
-		]
-	  },
-	  "vscode": {
-		"extensions": [
-		  "esbenp.prettier-vscode",
-		  "dbaeumer.vscode-eslint",
-		  "GitHub.copilot",
-		  "GitHub.copilot-chat"
-		],
-		"settings": {
-		  "editor.formatOnSave": true,
-		  "terminal.integrated.defaultProfile.linux": "bash"
+		"vscode": {
+			"extensions": [
+				"ms-vscode.live-server"
+			]
 		}
-	   },
-	},
-	"portsAttributes": {
-	  "5173": {
-		"label": "Application",
-		"onAutoForward": "openPreview"
-	  }
-	},
-	"forwardPorts": [5173]
-  }
+	}
+}
